# uri_scraper

./: .pre-commit-config.yaml  pyproject.toml
uri_scraper/: uri_submitter.py
