[tool.poetry]
name = "uri_scraper"
version = "0.1.0"
description = ""
authors = ["Rodrigo C. Moraes <rdcmdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.10.1"
isort = "^5.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"
requests = "^2.25.1"
lxml = "^4.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
